--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <p class="intro__subtitle">Hello, I'm</p>
           <h1 class="intro__title">Martin Viñas</h1>
           <p class="intro__subtitle"></p>
-          <a href="/resume.pdf" class="btn" target="_blank">Download Resume</a>
+          <!-- <a href="/resume.pdf" class="btn" target="_blank">Download Resume</a> -->
           <div class="social-icons">
             <!-- Github -->
             <a href="https://github.com/martinvias00" target="_blank">
