Revise 'About Me' section in index.html
Updated personal description to reflect current education and skills.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="about" class="about main-section wow fadeInUp" data-wow-duration="0.8s">
       <h2 class="section__title">About Me</h2>
         <p class="about__description">
-          I am passionate about learning new skills and being innovative. B.S. Computer Science graduate of PUP Sta.mesa Manila. Technical proficiencies include PHP,JAVA, Python, HTML5/CSS3, Javascript, Reactjs.
+          I am a full-stack web developer and B.S. Computer Science graduate from PUP Sta. Mesa, currently taking my Master of Science in Information Technology at PUP as well. I primarily work with the MERN stack (MongoDB, Express, React, Node.js), CodeIgniter 4, JavaScript/MySQL, and Laravel, with experience in building and integrating RESTful APIs, plus some FlutterFlow for rapid prototyping. I’m passionate about learning new technologies, building data-driven solutions, and delivering clean, maintainable code that creates real impact.
 
         </p>
       </div>
