Update navigation links and text to uppercase

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           </div>
         </div>
         <ul class="nav-items">
-          <li><a href="/#header" class="nav-link scroll">home</a></li>
-          <li><a href="/#about" class="nav-link scroll">about me</a></li>
-          <li><a href="/#projects" class="nav-link scroll">projects</a></li>
-          <li><a href="/#expertise" class="nav-link scroll">expertise</a></li>
+          <li><a href="/#header" class="nav-link scroll">HOME</a></li>
+          <li><a href="/#about" class="nav-link scroll">ABOUT me</a></li>
+          <li><a href="/#projects" class="nav-link scroll">PROJECTS</a></li>
+          <li><a href="/#expertise" class="nav-link scroll">EXPERTISE</a></li>
         </ul>
       </nav>
       <!-- Navbar Ends -->
@@ -63,7 +63,7 @@
           </div>
         </div>
         <ul class="features wow fadeInUp" data-wow-duration="0.8s">
-          <li>React Developer</li>          
+          <li>Full Stack Developer</li>          
           <li>Tech Support Specialist</li>
         </ul>
       </section>
