--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <ul class="nav-items">
           <li><a href="/#header" class="nav-link scroll">HOME</a></li>
-          <li><a href="/#about" class="nav-link scroll">ABOUT me</a></li>
+          <li><a href="/#about" class="nav-link scroll">ABOUT ME</a></li>
           <li><a href="/#projects" class="nav-link scroll">PROJECTS</a></li>
           <li><a href="/#expertise" class="nav-link scroll">EXPERTISE</a></li>
         </ul>
