--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="about" class="about main-section wow fadeInUp" data-wow-duration="0.8s">
       <h2 class="section__title">About Me</h2>
         <p class="about__description">
-          I am a full-stack web developer and B.S. Computer Science graduate from PUP Sta. Mesa, currently taking my Master of Science in Information Technology at PUP as well. I primarily work with the MERN stack (MongoDB, Express, React, Node.js), CodeIgniter 4, JavaScript/MySQL, and Laravel, with experience in building and integrating RESTful APIs, plus some FlutterFlow for rapid prototyping. I’m passionate about learning new technologies, building data-driven solutions, and delivering clean, maintainable code that creates real impact.
+          I am a full-stack web developer and B.S. Computer Science graduate from PUP Sta. Mesa, currently taking my Master of Science in Information Technology at PUP as well. I primarily work with the MERN stack (MongoDB, Express, React, Node.js), CodeIgniter 4, JavaScript/MySQL, and Laravel, with experience in building and integrating RESTful APIs, plus some FlutterFlow for rapid prototyping. I also have hands-on experience deploying systems on Google Cloud Platform (GCP), implementing CI/CD pipelines, Cloud Armor security, and HTTP(S) load balancing, as well as designing and implementing automated ETL pipelines using Python in Linux environments. I’m passionate about learning new technologies, building data-driven solutions, and delivering clean, maintainable code that creates real impact.
 
         </p>
       </div>
